--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "ag-grid-community": "^22.1.1",
+    "ag-grid-enterprise": "^22.1.1",
+    "ag-grid-react": "^22.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-mosaic-component": "^3.2.0",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
