--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mosaic-component": "^3.2.0",
+    "react-redux": "^7.2.0",
+    "react-responsive-modal": "^4.0.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
